[gd_scene load_steps=20 format=3 uid="uid://cjk5bgc3v5bym"]

[ext_resource type="Script" path="res://scripts/ESaltarin.gd" id="1_3tltc"]
[ext_resource type="Texture2D" uid="uid://bynfv1ax2k7e2" path="res://assets/textures/Enemies.png" id="2_a40ym"]
[ext_resource type="Texture2D" uid="uid://dfwuyxfloe3yl" path="res://assets/textures/DirtParticles.png" id="2_f34i5"]
[ext_resource type="AudioStream" uid="uid://ca30peq7vpcoa" path="res://assets/sounds/sfx/EJumpDeath.wav" id="4_27geg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_w52b6"]
atlas = ExtResource("2_a40ym")
region = Rect2(208, 160, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kp4eg"]
atlas = ExtResource("2_a40ym")
region = Rect2(192, 160, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2bqy"]
atlas = ExtResource("2_f34i5")
region = Rect2(0, 16, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4rr0"]
atlas = ExtResource("2_f34i5")
region = Rect2(24, 16, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ct0h2"]
atlas = ExtResource("2_f34i5")
region = Rect2(48, 16, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sl6mu"]
atlas = ExtResource("2_f34i5")
region = Rect2(72, 16, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpw05"]
atlas = ExtResource("2_f34i5")
region = Rect2(120, 16, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tm36q"]
atlas = ExtResource("2_f34i5")
region = Rect2(144, 16, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ragp6"]
atlas = ExtResource("2_a40ym")
region = Rect2(128, 160, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_osemr"]
atlas = ExtResource("2_a40ym")
region = Rect2(144, 160, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_susvj"]
atlas = ExtResource("2_a40ym")
region = Rect2(160, 160, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_2v5l0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w52b6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kp4eg")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2bqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4rr0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ct0h2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ct0h2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sl6mu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpw05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tm36q")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ragp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_osemr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_susvj")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ehws1"]
size = Vector2(12, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rmpuo"]
size = Vector2(10, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lw8vr"]
size = Vector2(1, 0.5)

[node name="ESaltarin" type="CharacterBody2D" groups=["Enemy"]]
position = Vector2(0, -1)
collision_layer = 4
collision_mask = 3
script = ExtResource("1_3tltc")
speed = 40

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 3)
scale = Vector2(1, 0.954545)
sprite_frames = SubResource("SpriteFrames_2v5l0")
animation = &"death"

[node name="tiempoSalto" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="HitboxArea" type="Area2D" parent="."]
position = Vector2(0, 6.5)
collision_layer = 4
collision_mask = 2

[node name="Hitbox" type="CollisionShape2D" parent="HitboxArea"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_ehws1")

[node name="HurtboxArea" type="Area2D" parent="."]
collision_mask = 8

[node name="HurtboxShape" type="CollisionShape2D" parent="HurtboxArea"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_rmpuo")
debug_color = Color(1, 0.0156863, 0.00392157, 0.419608)

[node name="Collision" type="CollisionShape2D" parent="." groups=["Enemy"]]
position = Vector2(0, 9.5)
scale = Vector2(1.24078, 0.755832)
shape = SubResource("RectangleShape2D_lw8vr")
disabled = true

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_27geg")
volume_db = -15.391
pitch_scale = 0.75

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="tiempoSalto" to="." method="_on_tiempo_salto_timeout"]
[connection signal="body_entered" from="HitboxArea" to="." method="_on_hitbox_area_body_entered"]
[connection signal="area_entered" from="HurtboxArea" to="." method="_on_hurtbox_area_area_entered"]
