[gd_scene load_steps=23 format=3 uid="uid://cjk5bgc3v5bym"]

[ext_resource type="Script" path="res://scripts/ESaltarin.gd" id="1_3tltc"]
[ext_resource type="Texture2D" uid="uid://bynfv1ax2k7e2" path="res://assets/textures/Enemies.png" id="2_a40ym"]
[ext_resource type="Texture2D" uid="uid://dfwuyxfloe3yl" path="res://assets/textures/DirtParticles.png" id="2_f34i5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_l2bqy"]
atlas = ExtResource("2_f34i5")
region = Rect2(0, 16, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4rr0"]
atlas = ExtResource("2_f34i5")
region = Rect2(24, 16, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ct0h2"]
atlas = ExtResource("2_f34i5")
region = Rect2(48, 16, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sl6mu"]
atlas = ExtResource("2_f34i5")
region = Rect2(72, 16, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmv6k"]
atlas = ExtResource("2_f34i5")
region = Rect2(96, 16, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpw05"]
atlas = ExtResource("2_f34i5")
region = Rect2(120, 16, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tm36q"]
atlas = ExtResource("2_f34i5")
region = Rect2(144, 16, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ds3qm"]
atlas = ExtResource("2_f34i5")
region = Rect2(168, 16, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ce2b"]
atlas = ExtResource("2_f34i5")
region = Rect2(192, 16, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrpug"]
atlas = ExtResource("2_f34i5")
region = Rect2(216, 16, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_34gcw"]
atlas = ExtResource("2_f34i5")
region = Rect2(240, 16, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ql4gl"]
atlas = ExtResource("2_f34i5")
region = Rect2(264, 16, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vwn1"]
atlas = ExtResource("2_f34i5")
region = Rect2(288, 16, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ragp6"]
atlas = ExtResource("2_a40ym")
region = Rect2(128, 160, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_osemr"]
atlas = ExtResource("2_a40ym")
region = Rect2(144, 160, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_susvj"]
atlas = ExtResource("2_a40ym")
region = Rect2(160, 160, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_2v5l0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2bqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4rr0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ct0h2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sl6mu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmv6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpw05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tm36q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ds3qm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ce2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrpug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34gcw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ql4gl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vwn1")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ragp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_osemr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_susvj")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lw8vr"]
size = Vector2(6, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ehws1"]
size = Vector2(10, 8)

[node name="ESaltarin" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_3tltc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 3.75)
scale = Vector2(1, 0.954545)
sprite_frames = SubResource("SpriteFrames_2v5l0")
animation = &"idle"

[node name="tiempoSalto" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_lw8vr")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, 7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_ehws1")

[connection signal="timeout" from="tiempoSalto" to="." method="_on_tiempo_salto_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
